--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "body-parser": "^1.15.2",
     "dotenv": "^2.0.0",
     "express": "~4.14.0",
-    "mongoose": "^4.6.8"
+    "jsonwebtoken": "^7.2.1",
+    "mongoose": "^4.6.8",
+    "morgan": "^1.7.0"
   },
   "author": "Matheus Piscioneri <mxczpiscioneri@gmail.com> (http://matheuspiscioneri.com.br)",
   "license": "MIT",
