--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^2.0.0",
     "express": "~4.14.0",
     "jsonwebtoken": "^7.2.1",
+    "lomadee-api": "^0.1.6",
     "mongoose": "^4.6.8",
     "morgan": "^1.7.0"
   },
