--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "lomadee-api": "^0.1.6",
     "mongoose": "^4.6.8",
     "morgan": "^1.7.0",
-    "multer": "^1.2.1"
+    "multer": "^1.2.1",
+    "request": "^2.79.0"
   },
   "devDependencies": {
     "node-sass": "^3.10.0"
