--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^4.6.8",
     "morgan": "^1.7.0",
     "multer": "^1.2.1",
+    "pagseguro.js": "^0.2.0",
     "request": "^2.79.0"
   },
   "devDependencies": {
