--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "morgan": "^1.7.0",
     "multer": "^1.2.1",
     "pagseguro.js": "^0.2.0",
-    "request": "^2.79.0"
+    "request": "^2.79.0",
+    "xml2js": "^0.4.17"
   },
   "devDependencies": {
     "node-sass": "^3.10.0"
