--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "body-parser": "^1.15.2",
+    "cors": "^2.8.1",
     "dotenv": "^2.0.0",
     "express": "~4.14.0",
     "jsonwebtoken": "^7.2.1",
