--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": "4.5.0"
   },
   "scripts": {
-    "start": "node app.js",
+    "start": "node app.js"
   },
   "dependencies": {
     "body-parser": "^1.15.2",
