--- a/.envSimple
+++ b/.envSimple
@@ -2,3 +2,10 @@ MONGO_URI=''
 SECRET=''
 APPLICATIONID=''
 SOURCEID=''
+
+AWS_ACCESS_KEY_ID=''
+AWS_SECRET_ACCESS_KEY=''
+S3_REGION=''
+S3_BUCKET=''
+
+TINIFY_KEY=''
