--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "body-parser": "^1.15.2",
+    "connect-multiparty": "^2.0.0",
     "dotenv": "^2.0.0",
     "express": "~4.14.0",
     "jsonwebtoken": "^7.2.1",
